# ME459-2023

./: README.md
FAQ/: README.md
FAQ/HowTo/: README.md  generating-random-numbers.md  hw_repos.md  timing.md  using-euler-gitlab.md  using-matlab-on-euler.md  using-python-on-euler.md  using-r-on-euler.md  using-vs-code-debugger.md
assignments/: README.md
assignments/2020/: README.md  hw_repos.md
assignments/2020/HW04/: structs.h
assignments/2020/HW05/: matrixgen.py
assignments/2020/HW06/: dll_alloc.h
assignments/2020/HW07/: knn.h
assignments/2020/HW08/: matmul.h  sumArray.h
assignments/2020/HW09/: matmul.c  matmul.h
assignments/2020/HW10/: math_utils.h
assignments/2021/HW03/: structs.h
assignments/2021/HW04/: mvmul.c
assignments/2021/HW06/: .gitlab-ci.yml  dll_alloc.c  dllist.h  task2.c  traversal.h
assignments/2021/HW07/: alloc.c  alloc.h  debugme.c  mysort.c  mysort.h  record.h  task2.c
assignments/2021/HW09/: matmul.c
assignments/2021/HW10/: task2.c
assignments/assignment01/: README.md
assignments/assignment02/: README.md
assignments/assignment05/: pyMatmul.py  pySort.py
assignments/assignment07/: mvmul.h
assignments/assignment08/: matmul.h  sumArray.h
assignments/assignment09/: README.md  matmul.h
assignments/assignment10/: math_utils.h
code-snippets/CMakeTutorial/Step3/: CMakeLists.txt
code-snippets/CMakeTutorial/Step3/MathFunctions/: CMakeLists.txt
code-snippets/CMakeTutorial/Step6/: CMakeLists.txt
code-snippets/Ctutorial/: arrayVSpointer.c  badPowerAssign.c  helloWorld.c  junk.c  pntrAliasing.c  pointerFunc.c  printStuffOut.c  simplePointerExample.c  sumGame.c  swap.c
code-snippets/Debugging/: CMakeLists.txt  bugDebug.c  castingExample.c  pointerGym.c  sanitizeExample.c
code-snippets/FinitePrecision/: CMakeLists.txt  int_as_float.c  roundoffExmpl.c  sinxOverx.c  standSizes.c  typeLengthByte.c  wrapAround.c
code-snippets/InterpretedLang/R/: functionExample.r  using-r-on-euler.md
code-snippets/InterpretedLang/Shell/: functionCall.sh  ifElse.sh
code-snippets/InterpretedLang/python/: using-python-on-euler.md
code-snippets/MemoryRelated/Malware/: driver.c  myFunc.c
code-snippets/MemoryRelated/MatrixRepresentation/: matrix2D.cpp
code/CMakeTutorial/Step2/: CMakeLists.txt
code/CMakeTutorial/Step2/MathFunctions/: CMakeLists.txt
code/Ctutorial/: CMakeLists.txt  allocMemDyn.c  castingExample.c  cmake_install.cmake  memmoveExample.c  pntrVSarray.c  pointerTrickery.c  pointerWildCard.c  precedence.c  simpleMallocExample.c  simpleMallocExample2.c  staticExample.c  structExample.c  typeArrayInt3.c
code/Debugging/: badPowerAssign.c  gdbGoodPractice.c  sanitizeExample
code/FinitePrecision/: matrix2D-FinitePrec.cpp  powExample.cxx  typeLength.cxx
code/InterpretedLang/R/: BirdData.csv  advancedFeatures.r  carsLinRegression.r  dataTypes.r  plotExamples.r  vectorExamples.r
code/InterpretedLang/Shell/: argumentCmdLine1.sh  argumentCmdLine2.sh  userInput.sh
code/InterpretedLang/matlab/: readme.md  using-matlab-on-euler.md
code/InterpretedLang/python/: readme.md
code/MemoryRelated/: CMakeLists.txt  pointerVirtMem.c
code/MemoryRelated/Malware/: CMakeLists.txt
code/MemoryRelated/MatrixRepresentation/: CMakeLists.txt  matrix1D.cpp
python_envs/: me459.yml
